fixed typo batch2

--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,13 @@
       transform: translateX(-50%);
     }
   }
+
+  @keyframes marqueerev {
+    0% {
+      
+      transform: translateX(-50%);
+    }
+    100% {
+      transform: translateX(0%);
+    }
+  }
